# leets

./: .gitignore  CMakeLists.txt  README.md
codewars/: 7ku-descending-order.cpp  7kyu-disemvowel-trolls.cpp  7kyu-highest-and-lowest.cpp  7kyu-square-every-digit.cpp  7kyu-vowel-count.cpp  8kyu-convert-a-number-to-a-string.cpp  8kyu-convert-a-string-to-a-number.cpp  8kyu-convert-boolean-values.cpp  8kyu-counting-sheep.cpp  8kyu-even-or-odd.cpp  8kyu-find-the-smallest-integer.cpp  8kyu-grasshopper-summation.cpp  8kyu-multiply.cpp  8kyu-opposite-number.cpp  8kyu-remove-first-and-last-character.cpp  8kyu-remove-string-spaces.cpp  8kyu-return-negative.cpp  8kyu-reversed-strings.cpp  8kyu-square-n-sum.cpp  8kyu-string-repeat.cpp  8kyu-sum-of-positive.cpp
leetcode/: 1-two-sum.cpp  125-valid-palindrome.cpp  20-valid-parentheses.cpp  217-contains-duplicate.cpp  242-valid-anagram.cpp  344-reverse-string.cpp  704-binary-search.cpp
